Add ability to select render backends in CMAKE

--- a/Horde3D/Source/Horde3DEngine/CMakeLists.txt
+++ b/Horde3D/Source/Horde3DEngine/CMakeLists.txt
@@ -20,9 +20,6 @@ set(HORDE3D_SOURCES
 	egParticle.cpp
 	egPipeline.cpp
 	egPrimitives.cpp
-	egRendererBaseGL2.cpp
-	egRendererBaseGL4.cpp
-	egRendererBaseGLES3.cpp
 	egRenderer.cpp
 	egResource.cpp
 	egScene.cpp
@@ -30,8 +27,6 @@ set(HORDE3D_SOURCES
 	egShader.cpp
 	egTexture.cpp
 	utImage.cpp
-	utOpenGL.cpp
-	utOpenGLES3.cpp
 	config.h
 	egAnimatables.h
 	egAnimation.h
@@ -51,9 +46,6 @@ set(HORDE3D_SOURCES
 	egPrimitives.h
 	egRenderer.h
 	egRendererBase.h
-	egRendererBaseGL2.h
-	egRendererBaseGL4.h
-	egRendererBaseGLES3.h
 	egResource.h
 	egScene.h
 	egSceneGraphRes.h
@@ -61,8 +53,6 @@ set(HORDE3D_SOURCES
 	egTexture.h
 	utImage.h
 	utTimer.h
-	utOpenGL.h
-	utOpenGLES3.h
     ../Shared/utPlatform.h
 	../../Bindings/C++/Horde3D.h
 	${HORDE3D_EXTENSION_SOURCES}
@@ -70,18 +60,35 @@ set(HORDE3D_SOURCES
 
 add_definitions(-DCMAKE )
 
-if (FORCE_GLES)
-	add_definitions(-DH3D_FORCE_GLES)
+if (USE_GL2 OR USE_GL4)
+	if (USE_GL2)
+		add_definitions(-DH3D_USE_GL2)
+
+		list(APPEND HORDE3D_SOURCES "egRendererBaseGL2.h")
+		list(APPEND HORDE3D_SOURCES "egRendererBaseGL2.cpp")
+	endif (USE_GL2)
+
+	if (USE_GL4)
+		add_definitions(-DH3D_USE_GL4)
+
+		list(APPEND HORDE3D_SOURCES "egRendererBaseGL4.h")
+		list(APPEND HORDE3D_SOURCES "egRendererBaseGL4.cpp")
+	endif (USE_GL4)
+	
+	list(APPEND HORDE3D_SOURCES "utOpenGL.h")
+	list(APPEND HORDE3D_SOURCES "utOpenGL.cpp")
+endif(USE_GL2 OR USE_GL4)
+
+if (USE_GLES3)
+	add_definitions(-DH3D_USE_GLES3)
 	
 	# remove other opengl render backends from build
-	list(REMOVE_ITEM HORDE3D_SOURCES "egRendererBaseGL2.h")
-	list(REMOVE_ITEM HORDE3D_SOURCES "egRendererBaseGL2.cpp")
-	list(REMOVE_ITEM HORDE3D_SOURCES "egRendererBaseGL4.h")
-	list(REMOVE_ITEM HORDE3D_SOURCES "egRendererBaseGL4.cpp")
-	list(REMOVE_ITEM HORDE3D_SOURCES "utOpenGL.h")
-	list(REMOVE_ITEM HORDE3D_SOURCES "utOpenGL.cpp")
+	list(APPEND HORDE3D_SOURCES "egRendererBaseGLES3.h")
+	list(APPEND HORDE3D_SOURCES "egRendererBaseGLES3.cpp")
+	list(APPEND HORDE3D_SOURCES "utOpenGLES3.h")
+	list(APPEND HORDE3D_SOURCES "utOpenGLES3.cpp")
 
-endif (FORCE_GLES)
+endif (USE_GLES3)
 
 add_library(Horde3D SHARED
 	${HORDE3D_SOURCES}
@@ -93,33 +100,33 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
 		set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -DSECURE_SCL=0")		
 	ENDIF(MSVC)
 	
-	if (FORCE_GLES)
+	if (USE_GLES3)
 		FIND_PACKAGE(OpenGLESv2 REQUIRED)
 		# add additional include paths for egl and gles
 		include_directories(${EGL_INCLUDE_DIR} ${OPENGLES2_INCLUDE_DIR})
 	
 		target_link_libraries(Horde3D ${EGL_LIBRARIES} ${OPENGLES2_LIBRARIES} ${HORDE3D_EXTENSION_LIBS})
-	else (FORCE_GLES)
+	else (USE_GLES3)
 		FIND_PACKAGE(OpenGL REQUIRED)
 		target_link_libraries(Horde3D ${OPENGL_gl_LIBRARY} ${HORDE3D_EXTENSION_LIBS})
-	endif (FORCE_GLES)
+	endif (USE_GLES3)
 endif(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
-    if (FORCE_GLES)
+    if (USE_GLES3)
 		FIND_PACKAGE(OpenGLESv2 REQUIRED)
 		# add additional include paths for egl and gles
 		include_directories(${EGL_INCLUDE_DIR} ${OPENGLES2_INCLUDE_DIR})
 	
 		target_link_libraries(Horde3D ${EGL_LIBRARIES} ${OPENGLES2_LIBRARIES} ${HORDE3D_EXTENSION_LIBS})
-	else (FORCE_GLES)
+	else (USE_GLES3)
 		FIND_PACKAGE(OpenGL REQUIRED)
 		if( EGL_FOUND )
             add_definitions( -DHAVE_EGL ${EGL_DEFINITIONS} )
         endif( EGL_FOUND )
 
         target_link_libraries(Horde3D ${OPENGL_gl_LIBRARY} ${EGL_LIBRARIES} ${HORDE3D_EXTENSION_LIBS})
-	endif (FORCE_GLES)        	
+	endif (USE_GLES3)        	
 
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fpic")
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpic")
