All samples now correctly build with sdl on Linux

--- a/Horde3D/Samples/Chicago/CMakeLists.txt
+++ b/Horde3D/Samples/Chicago/CMakeLists.txt
@@ -1,10 +1,13 @@
 add_executable(Chicago WIN32 MACOSX_BUNDLE
-    ../Framework/sampleapp.cpp
 	app.cpp
 	crowd.cpp
 	main.cpp
 )
 
-target_link_libraries(Chicago Horde3D Horde3DUtils ${GLFW_LIBRARIES})
+if(HORDE3D_USE_GLFW)
+	target_link_libraries(Chicago Horde3D Horde3DUtils SampleFramework ${GLFW_LIBRARIES})
+elseif(HORDE3D_USE_SDL)
+	target_link_libraries(Chicago Horde3D Horde3DUtils SampleFramework ${SDL2_LIBRARY})
+endif()
 
 add_dependencies(Chicago SampleFramework)
