Adapted Terrain sample

--- a/Extensions/Terrain/Sample/CMakeLists.txt
+++ b/Extensions/Terrain/Sample/CMakeLists.txt
@@ -3,12 +3,15 @@ include_directories(../../../Horde3D/Bindings/C++)
 include_directories(../../Overlays/Bindings/C++)
 
 add_executable(Terrain WIN32 MACOSX_BUNDLE
-	../../../Horde3D/Samples/Framework/sampleapp.cpp
 	app.cpp
 	main.cpp
 )
-	
-target_link_libraries(Terrain Horde3D Horde3DUtils ${GLFW_LIBRARIES})
+
+if(HORDE3D_USE_GLFW)
+	target_link_libraries(Terrain Horde3D Horde3DUtils SampleFramework ${GLFW_LIBRARIES})
+elseif(HORDE3D_USE_SDL)
+	target_link_libraries(Terrain Horde3D Horde3DUtils SampleFramework ${SDL2_LIBRARY})
+endif()
 
 add_dependencies(Terrain SampleFramework)
 
