Now horde correctly searches for libraries and compiles samples as shared libraries

--- a/Horde3D/Samples/Chicago/CMakeLists.txt
+++ b/Horde3D/Samples/Chicago/CMakeLists.txt
@@ -1,8 +1,16 @@
-add_executable(Chicago WIN32 MACOSX_BUNDLE
-	app.cpp
-	crowd.cpp
-	main.cpp
-)
+if( ${CMAKE_SYSTEM_NAME} MATCHES "Android" )
+	add_library( Chicago SHARED 
+		app.cpp
+		crowd.cpp
+		main.cpp
+	)
+else()
+	add_executable(Chicago WIN32 MACOSX_BUNDLE
+		app.cpp
+		crowd.cpp
+		main.cpp
+	)
+endif()
 
 if(HORDE3D_USE_GLFW)
 	target_link_libraries(Chicago Horde3D Horde3DUtils SampleFramework ${GLFW_LIBRARIES})
