--- a/Horde3D/Source/Horde3DEngine/CMakeLists.txt
+++ b/Horde3D/Source/Horde3DEngine/CMakeLists.txt
@@ -151,11 +151,13 @@ endif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 
 if( ${CMAKE_SYSTEM_NAME} MATCHES "Android" )
 	FIND_PACKAGE(OpenGLESv2 REQUIRED)
+	find_library( log-lib log )
+			  
 	# add additional include paths for egl and gles
 	include_directories(${EGL_INCLUDE_DIR} ${OPENGLES2_INCLUDE_DIR})
 
 	# For ES3, Android requires non-standard library libGLESv3, which CMAKE does not correctly find. Hack it here instead.
 	string( REPLACE "libGLESv2.so" "libGLESv3.so"  OPENGLES2_LIBRARIES ${OPENGLES2_LIBRARIES} )
 
-	target_link_libraries(Horde3D ${EGL_LIBRARIES} ${OPENGLES2_LIBRARIES} ${HORDE3D_EXTENSION_LIBS})
+	target_link_libraries(Horde3D ${EGL_LIBRARIES} ${OPENGLES2_LIBRARIES} ${log-lib} ${HORDE3D_EXTENSION_LIBS})
 endif()
