Begin adopting android build process for Linux. Moved apk copy to android.apk.cmake from gradle project.

--- a/BuildTools/android/app/build.gradle.in
+++ b/BuildTools/android/app/build.gradle.in
@@ -58,13 +58,13 @@ dependencies {
 }
 
 afterEvaluate {
-    assembleDebug.doLast {
-        copy {
-            from 'build/outputs/apk/debug'
-            into '../../../Binaries/Android/${CMAKE_BUILD_TYPE}'
-            include '**/*.apk'
-        }
-    } 
+//    assembleDebug.doLast {
+//        copy {
+//            from 'build/outputs/apk/debug'
+//            into '../../../Binaries/Android/${CMAKE_BUILD_TYPE}'
+//            include '**/*.apk'
+//       }
+//    } 
 
 //    assembleRelease.doLast {
 //        copy {
