--- a/Extensions/Terrain/Sample/CMakeLists.txt
+++ b/Extensions/Terrain/Sample/CMakeLists.txt
@@ -12,9 +12,9 @@ if( ${CMAKE_SYSTEM_NAME} MATCHES "Android" )
         main.cpp
     )
 
-    set( OUT_PATH "${PROJECT_BINARY_DIR}/Android/Terrain/app/src/main/jnilibs/${ANDROID_ABI}" )
+    set( OUT_PATH "${PROJECT_BINARY_DIR}/Android/Terrain/app/src/main/jniLibs/${ANDROID_ABI}" )
 
-    # Set output path to android project jnilibs, where gradle can find the built application in .so form
+    # Set output path to android project jniLibs, where gradle can find the built application in .so form
     set_target_properties( Terrain PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${OUT_PATH} )
 
     ### Copy engine libraries and SDL library
