--- a/Horde3D/Source/Horde3DUtils/CMakeLists.txt
+++ b/Horde3D/Source/Horde3DUtils/CMakeLists.txt
@@ -2,12 +2,20 @@
 include_directories(../Shared)
 include_directories(../../Bindings/C++)
 
+# For all platforms except iOS, engine is built as shared library
+if (${CMAKE_SYSTEM_NAME} MATCHES "iOS")
+	add_library(Horde3DUtils STATIC
+		main.cpp
+		../../Bindings/C++/Horde3DUtils.h
+		)
+else()
+# Other platforms
+	add_library(Horde3DUtils SHARED
+		main.cpp
+		../../Bindings/C++/Horde3DUtils.h
+		)	
+endif()
 
-add_library(Horde3DUtils SHARED
-	main.cpp
-	../../Bindings/C++/Horde3DUtils.h
-	)
-	
 target_link_libraries(Horde3DUtils Horde3D)
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
