Prevent from building ColladaConverter on ios and android

--- a/Horde3D/Source/ColladaConverter/CMakeLists.txt
+++ b/Horde3D/Source/ColladaConverter/CMakeLists.txt
@@ -1,5 +1,7 @@
 include_directories(../Shared)
 
+# Do not build collada converter for ios or android
+if( (NOT ${CMAKE_SYSTEM_NAME} MATCHES "iOS") AND (NOT ${CMAKE_SYSTEM_NAME} MATCHES "Android") )
 add_executable(ColladaConv 
 	converter.h
 	daeCommon.h
@@ -19,4 +21,4 @@ add_executable(ColladaConv
 	optimizer.cpp
 	utils.cpp
 	)
-
+endif()
