Added other samples

--- a/Horde3D/Samples/ParticleVortex/CMakeLists.txt
+++ b/Horde3D/Samples/ParticleVortex/CMakeLists.txt
@@ -23,7 +23,46 @@ if( ${CMAKE_SYSTEM_NAME} MATCHES "Android" )
 	android_create_apk( ParticleVortex "com.horde3d.particlevortex" "${PROJECT_BINARY_DIR}/Android/ParticleVortex" "" 
 		${HORDE3D_ANDROID_PROJECT_PATH} "${PROJECT_BINARY_DIR}/Binaries/Content" )
 
+elseif( ${CMAKE_SYSTEM_NAME} MATCHES "iOS" )
+    set(RESOURCES
+        "${PROJECT_BINARY_DIR}/Binaries/Content"
+        ${HORDE3D_IOS_TOOLS_PATH}/LaunchScreen.storyboard
+        ${HORDE3D_IOS_TOOLS_PATH}/Default.png
+    )
+
+    add_executable(ParticleVortex MACOSX_BUNDLE
+        app.cpp
+        main.cpp
+        ${RESOURCES}
+    )
+
+    # Add plist
+    set_target_properties(ParticleVortex PROPERTIES
+        MACOSX_BUNDLE ON
+        MACOSX_BUNDLE_INFO_PLIST ${HORDE3D_IOS_TOOLS_PATH}/BundleInfo.plist.in)
+        
+    # Include ios macro
+    include( "ios" )
+
+    # Set development team
+    SET_XCODE_PROPERTY(ParticleVortex CODE_SIGN_IDENTITY ${IOS_CODE_SIGN_IDENTITY} )
+    SET_XCODE_PROPERTY(ParticleVortex DEVELOPMENT_TEAM ${IOS_DEVELOPMENT_TEAM})
+
+    SET_XCODE_PROPERTY(ParticleVortex ENABLE_BITCODE FALSE)
+
+    SET_XCODE_PROPERTY(ParticleVortex RESOURCE ${RESOURCES})
+    SET(CMAKE_XCODE_ATTRIBUTE_DEVELOPMENT_TEAM ${IOS_DEVELOPMENT_TEAM})
+    set_source_files_properties(${RESOURCES} PROPERTIES MACOSX_PACKAGE_LOCATION Resources)
+
+    # Attach required frameworks
+    target_link_libraries( ParticleVortex "-framework AudioToolbox" "-framework AVFoundation" "-framework CoreAudio"
+                                    "-framework CoreAudioKit" "-framework CoreFoundation" "-framework CoreGraphics"
+                                    "-framework CoreMotion" "-framework CoreVideo" "-framework Foundation"
+                                    "-framework GameController" "-framework QuartzCore" "-framework UiKit"
+                                    "-framework Metal" "-framework OpenGLES")
+    
 else()
+    # Desktop platforms
     add_executable(ParticleVortex WIN32 MACOSX_BUNDLE
         app.cpp
         main.cpp
