--- a/Extensions/ExternalTexture/Source/CMakeLists.txt
+++ b/Extensions/ExternalTexture/Source/CMakeLists.txt
@@ -8,6 +8,9 @@ SET(EXTERNAL_TEXTURE_HEADERS
 	egTextureEx.h
 )
 
+# CMAKE_BINARY_DIR is used for inclusion of automatically generated files
+include_directories( ${CMAKE_BINARY_DIR} )
+
 if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
 	if(${CMAKE_SYSTEM_PROCESSOR} MATCHES "x86_64")
 		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
