Terrain respect `HORDE3D_BUILD_EXAMPLES`

--- a/Extensions/Terrain/CMakeLists.txt
+++ b/Extensions/Terrain/CMakeLists.txt
@@ -10,7 +10,9 @@ if(HORDE3D_BUILD_TERRAIN)
 	set( HORDE3D_EXTENSION_INCLUDES "${HORDE3D_EXTENSION_INCLUDES}#include \"Extensions/Terrain/Source/extension.h\"\n" PARENT_SCOPE )
 	set( HORDE3D_EXTENSION_LIBS ${HORDE3D_EXTENSION_LIBS} Horde3DTerrain PARENT_SCOPE )
 
-	add_subdirectory(Sample)
+	if(HORDE3D_BUILD_EXAMPLES)
+		add_subdirectory(Sample)
+	endif(HORDE3D_BUILD_EXAMPLES)
 
 	if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
 		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fpic")
