--- a/Horde3D/CMakeLists.txt
+++ b/Horde3D/CMakeLists.txt
@@ -4,3 +4,6 @@ if(HORDE3D_BUILD_EXAMPLES)
 endif(HORDE3D_BUILD_EXAMPLES)
 add_subdirectory(Bindings)
 add_subdirectory(Binaries)
+if(HORDE3D_BUILD_TESTS)
+    add_subdirectory(Tests)
+endif(HORDE3D_BUILD_TESTS)
