Added cmake support for null renderer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,6 +75,12 @@ endif(HORDE3D_BUILD_EXAMPLES)
 option(HORDE3D_USE_GL2 "Add OpenGL 2 render backend. Turns off ES3 render backend." ON)
 option(HORDE3D_USE_GL4 "Add OpenGL 4 render backend. Turns off ES3 render backend." ON)
 option(HORDE3D_USE_GLES3 "Add OpenGL ES 3 render backend. Turns off desktop GL backends." OFF)
+option(HORDE3D_USE_NULL "Add Null render backend. Used for testing. Can work with other render backends." OFF)
+
+# Tests always enable Null render backend
+if(HORDE3D_BUILD_TESTS)
+    set(USE_NULL TRUE)
+endif(HORDE3D_BUILD_TESTS)
 
 if(HORDE3D_USE_GLES3)
 	set(USE_GLES3 TRUE)
