--- a/Horde3D/Tests/unit/CMakeLists.txt
+++ b/Horde3D/Tests/unit/CMakeLists.txt
@@ -1,11 +1,13 @@
 include_directories(..)
 include_directories(../../Source/Horde3DEngine)
+include_directories(../../Source/Horde3DUtils)
 include_directories(../../Source/Shared)
 include_directories(. ${CMAKE_BINARY_DIR})
 
 add_executable(H3DUnitTests WIN32 MACOSX_BUNDLE
     test_shaderparser.cpp
+    test_h3dutils.cpp
     ../main.cpp
 )
 
-target_link_libraries(H3DUnitTests Horde3D)
+target_link_libraries(H3DUnitTests Horde3D Horde3DUtils)
