Upgrade Editor CMakeLists to support Qt6

--- a/Horde3DEditor/src/QPropertyEditor/CMakeLists.txt
+++ b/Horde3DEditor/src/QPropertyEditor/CMakeLists.txt
@@ -17,7 +17,11 @@ SET(QPropertyEditor_HEADERS
 
 SET(QT_USE_QTXML TRUE)
 
-INCLUDE_DIRECTORIES(../../include ${QT_INCLUDES} ${Qt5Widgets_INCLUDE_DIRS} ${Qt5Core_INCLUDE_DIRS} )
+if( Qt6_FOUND )
+	INCLUDE_DIRECTORIES(../../include ${QT_INCLUDES} ${Qt6Widgets_INCLUDE_DIRS} ${Qt6Core_INCLUDE_DIRS} )
+else()
+	INCLUDE_DIRECTORIES(../../include ${QT_INCLUDES} ${Qt5Widgets_INCLUDE_DIRS} ${Qt5Core_INCLUDE_DIRS} )
+endif()
 ADD_DEFINITIONS(${QT_DEFINITIONS})
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
