--- a/Horde3DEditor/src/QXmlTree/CMakeLists.txt
+++ b/Horde3DEditor/src/QXmlTree/CMakeLists.txt
@@ -14,7 +14,12 @@ SET(QXmlTree_HEADERS
     QXmlTreeView.h
     )
 
-INCLUDE_DIRECTORIES(../../include ${QT_INCLUDES} ${Qt5Widgets_INCLUDE_DIRS} ${Qt5Core_INCLUDE_DIRS}  ${Qt5Xml_INCLUDE_DIRS} )
+if( Qt6_FOUND )
+	INCLUDE_DIRECTORIES(../../include ${QT_INCLUDES} ${Qt6Widgets_INCLUDE_DIRS} ${Qt6Core_INCLUDE_DIRS} ${Qt6Xml_INCLUDE_DIRS} )
+else()
+	INCLUDE_DIRECTORIES(../../include ${QT_INCLUDES} ${Qt5Widgets_INCLUDE_DIRS} ${Qt5Core_INCLUDE_DIRS}  ${Qt5Xml_INCLUDE_DIRS} )
+endif()
+
 ADD_DEFINITIONS(${QT_DEFINITIONS})
 
 ADD_LIBRARY( QXmlTree STATIC ${QXmlTree_SOURCES}  ${QXmlTree_HEADERS} )
